# emotion-circuits-project

./: .gitignore  README.md  SETUP.md  masterplan.md  memo.md  pyproject.toml  requirements.txt  先行研究との比較.md  先行研究調査（DeepResearch）.md  成果整理_20251115.md  成果整理_20251116.md
data/: anger_prompts.json  anger_prompts_extended.json  apology_prompts.json  apology_prompts_extended.json  emotion_dataset.jsonl  emotion_dataset_extended.jsonl  emotion_dataset_smoke.jsonl  gratitude_prompts.json  gratitude_prompts_extended.json  neutral_prompts.json  neutral_prompts_extended.json  real_world_samples.json  real_world_samples.jsonl  test_prompts.json
docs/: comprehensive_experiment_progress.md  final_improvements_summary.md  final_report.md  implementation_plan.md  improvements_summary.md  next_actions.md  phase2_report.md  phase3.5_and_4light_report.md  phase3_report.md  phase5_report.md  phase6_expansion_report.md  phase7_development_plan.md  process_flow_diagram.html  test_execution_summary.md
results/: cross_model_similarity.csv  cross_model_similarity_token_based.csv  cross_model_subspace_overlap.csv
scripts/: consistency_check.py  phase1_log_to_mlflow.py  phase2_extract_all_activations.py  run_comprehensive_experiment.sh  run_phase2_all_models.sh  run_phase3_all_models.sh  run_phase4_all_combinations.sh  run_phase5_all_models.sh  run_phase6a_all_models.sh  run_phase6b_all_models.sh  run_phase7_all.sh  verify_refactoring.py  wait_for_phase6a_qwen.sh
src/: __init__.py
tests/: __init__.py  test_activation_patching.py  test_extract_activations.py  test_gpt2_hook.py  (+1 more)
(+225 files in other folders)
