[project]
name = "emotion-circuits-project"
version = "0.1.0"
description = "軽量LLMを用いた感情表現回路探索プロジェクト"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformer-lens>=1.7.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "tqdm>=4.65.0",
    "scikit-learn>=1.3.0",  # PCA, CCA用
    "accelerate>=0.20.0",  # HuggingFaceモデル用
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

